Add authentication, remove source channels from config, implement message promotion/demotion
- Add authentication configuration with username and password
- Remove source_channels from config.yaml, now managed in database only
- Remove config.add_source_channel and config.remove_source_channel methods
- Update add_source_channel and remove_source_channel to only use database
- Implement promote_message method to move messages between priority buckets
- Implement demote_message method to lower message

--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,8 @@
+# Authentication
+auth:
+  username: admin
+  password: hamidspulse2026
+
 content_style:
   core_characteristics:
   - هویت و مأموریت
@@ -303,14 +308,6 @@ logging:
 rate_limits:
   max_posts_per_hour: 7
   max_queue_items: 50
-source_channels:
-- '@ttttsgheae'
-- '@akharinkhabar'
-- '@VahidOnline'
-- '@Middle_East_Spectator'
-- '@abdimedianet'
-- '@ClashReport'
-- '@news_bbc_persian'
 target_channel: hamidspulse
 thresholds:
   high_threshold: 85
